hermes_fuzz_executed/fuzz_86_execution
'use strict';
let a = {foo: function a() {
    let b = Promise.resolve('done');
    b.toLowerCase = 'toLowerCase'
    return 1 + 2;
}};
a;
a;
a;
a.foo.toString()
a;
a;
a;
a;
}
 

Execution Output ------------------:
test.js:15:1: error: invalid expression
}
^
